# Reduceron

./: INSTALL  LICENSE  Makefile  README  README.md  Reduceron-reduced.txt  STATUS  TODO  clean.sh  fl-pure.hs  flite.cabal  make.sh
.github/workflows/: haskell.yml
Flite/: Compile.hs  CompileBackend.lhs  CompileFrontend.hs  Dependency.hs  Descend.hs  Flite.hs  Identity.hs  Inline.hs  Interp.hs  InterpFrontend.hs  LambdaLift.hs  Let.hs  Matching.hs  Predex.hs  Pretty.hs  RedCompile.hs  RedFrontend.hs  RedSyntax.hs  State.hs  Strictify.hs  Strictness.hs  Syntax.hs  Traversals.hs  WorkerWrapper.hs  Writer.hs
Flite/Parsec/: Flite.hs  Parse.hs  Prelude.hs
docs/: Flite.txt  README.md  reduceron-report.txt
docs/Memos/: Memo1.txt  Memo10.txt  Memo11.txt  Memo12.lhs  Memo13.txt  Memo14.txt  Memo15.lhs  Memo16.txt  Memo18.lhs  Memo2.txt  Memo21.txt  Memo22.lhs  Memo23.txt  Memo25.txt  Memo26.lhs  Memo27.lhs  Memo28.txt  Memo3.txt  Memo31.txt  Memo32.txt  Memo33.txt  Memo34.txt  Memo35.txt  Memo36.txt  Memo37.txt  Memo38.txt  Memo39.txt  Memo4.txt  Memo40.txt  Memo44.txt  Memo45.txt  Memo46.txt  Memo47.txt  Memo48.txt  Memo49.txt  Memo5.txt  Memo50.txt  Memo6.txt  Memo7.txt  Memo8.txt  (+1 more)
emulator/: Makefile  emu-32-bit.c  emu.c  myemu.c  profemu.c  red_atom.h  red_types.h
emulators/: profemu.c
examples/: Adjoxo.hs  Cichelli.hs  Clausify.hs  Fib.hs  Mate.hs  PermSort.hs  Queens2.hs  Sudoku.hs  Taut.hs
flite/: INSTALL  Makefile  README  fl-parsec.hs  fl-pure.hs  flite.cabal  stack.yaml
flite/Flite/: CallGraph.hs  Case.hs  Compile.hs  CompileBackend.lhs  ConcatApp.hs  Dependency.hs  Flatten.hs  Flite.hs  Fresh.hs  Identify.hs  Identity.hs  Inline.hs  IntInfer.hs  Interp.hs  Let.hs  Matching.hs  Parse.hs  ParseLib.hs  Predex.hs  RedCompile.hs  RedFrontend.hs  State.hs  Strictify.hs  Strictness.hs  Syntax.hs  Traversals.hs  WorkerWrapper.hs  Writer.hs  WriterState.hs
flite/Flite/Parsec/: Flite.hs  Parse.hs  Prelude.hs
flite/docs/: Flite.txt
flite/examples/: Adjoxo.hs  Braun.hs  Cichelli.hs  Clausify.hs  Countdown.hs  Fib.hs  KnuthBendix.hs  MSS.hs  Mate.hs  OrdList.hs  Parts.hs  PermSort.hs  Queens.hs  Queens2.hs  Sudoku.hs  Taut.hs  While.hs
fpga/: Bytecode.hs  CachingOctostack.hs  Code.hs  Collect.hs  Encode.hs  Heap.hs  Main.hs  Makefile  Reduceron.hs  RegFile.hs  Unistack.hs  ghci  reduceron.cabal  runhugs.sh  stack.yaml
fpga/Reduceron/: Makefile  Reduceron.v  main.v  rs232.v  rs232in.v  rs232out.v  sim_main.cpp  state.filter  toplevel.v
fpga/Reduceron/BeMicro CV A9/: BeMicroCVA9.qpf  BeMicroCVA9.qsf  BeMicroCVA9.sdc  BeMicroCVA9.v  Makefile
fpga/Reduceron/BeMicroCV-A9/: BeMicroCVA9.cdf
fpga/Reduceron/DE2-115/: Makefile  Reduceron.cdf  Reduceron.qpf  Reduceron.qsf  Reduceron.sdc  ram_c127.mif  toplevel.v
fpga/Reduceron/DE2-115/saved/: Cichelli.mif  CountDown.mif  Mate.mif  Mate2.mif  Parts.mif  SumPuz.mif
fpga/Reduceron/DE2-70/: Adjoxo.mif  Clausify.red  Example.mif  KnuthBendix.mif  MSS.mif  Reduceron.qpf  Reduceron.qsf  Reduceron.sdc  toplevel.v
fpga/Reduceron/DE2-70/saved/: Braun.mif  OrdList.mif  PermSort.mif  Queens.mif  Queens2.mif  Taut.mif  While.mif
fpga/Reduceron/ML509/: README.txt  top.vhd
fpga/src/: CachingOctostack.hs  Collect.hs  Hex.hs  Syntax.hs  Unistack.hs
genbmm/: README.txt
ghc-flite/: .gitignore  INSTALL.md  LICENSE  README.md  ghc-flite.cabal  red.cabal  stack.yaml
ghc-flite/src/: Main.hs
ghc-flite/src/GHC-Flite/: Translate.hs
ghc-flite/src/GHCFlite/: Translate.hs
ghc-flite/src/Red/: Translate.hs
ghc-flite/test/: test_main.hs
hf/: AssocTree.hs  Error.hs  Extra.hs  Flags.hs  H2F.hs  Id.hs  IdKind.hs  Info.hs  IntState.hs  Lex.hs  LexLow.hs  LexPre.hs  LexStr.hs  Lexical.hs  Makefile  MergeSort.hs  MkSyntax.hs  NT.hs  Nice.hs  OsOnly.hs  Parse.hs  Parse2.hs  ParseCore.hs  ParseLex.hs  ParseLib.hs  PrettyLib.hs  PrettySyntax.hs  Reduce.hs  Syntax.hs  SyntaxPos.hs  SysDeps.hs  TokenId.hs  Translate.hs  Translate.old.hs  Tree234.hs  Unlit.hs  hf.hs  sols.hs  solutions.hs
hf/Compiler98/: HbcOnly.hs  SyntaxUtil.hs
programs/: Adjoxo.hs  And.hs  And.red  BayHac13Demo.hs  Cichelli.hs  CountDown.hs  CountDown.red  Echo.hs  Fib.hs  Hello.hs  HelloEncoding.hs  KnuthBendix.hs  Makefile  Mate.hs  Mate.red  Mate2.hs  Parts.hs  PermSort.hs  Queens.hs  Queens2.hs  README.md  SmallFib.hs  SumPuz.hs  Taut.hs  While.hs  compile.sh  make.sh  workload-ticks.txt
red-lava/: Red Lava.txt  TODO.txt  red-lava.cabal
red-lava/examples/Avalon/: Main.hs  Makefile
red-lava/examples/Cube/: Cube.hs  Makefile  main.v
red-lava/examples/HalfAdd/: Makefile
red-lava/examples/LFSR/: Makefile
red-lava/examples/Loopy/: Loopy.hs  Makefile  main.v
red-lava/examples/Mult/: Makefile  Mult.hs  main.v
red-lava/examples/Poly/: Makefile  Poly.hs  main.v
red-lava/examples/Stack/: Makefile  Stack.hs
red-lava/examples/Toggle/: Makefile  Toggle.hs
red-lava/modules/: Avalon.hs  Lava.hs  Recipe.hs
red-lava/modules/Lava/: JList.hs  Prelude.hs  Vector.hs  Verilog.hs  Vhdl.hs
reduceron/: install.txt
semantics/: Makefile  Reduceron.lhs  Sum.hs  Tri.hs  Variant.lhs
york-lava/: LICENSE  YorkLava.txt  york-lava.cabal
york-lava/examples/: Cube.hs  HalfAdd.hs  Loopy.hs  Makefile  Mult.hs  Poly.hs  Stack.hs
york-lava/examples/Avalon/: Avalon.hs  Main.hs  Makefile  main.v
york-lava/examples/Cube/: Cube.hs  main.v
york-lava/examples/FiveCubedExample/: Makefile  main.v
york-lava/examples/HalfAdd/: Makefile  main.v
york-lava/examples/LFSR/: LFSR.hs  Makefile
york-lava/examples/Loopy/: Makefile  main.v
york-lava/examples/Mult/: Makefile  Mult.hs  main.v
york-lava/examples/MultExample/: Makefile  main.v
york-lava/examples/Poly/: Makefile  Poly.hs  main.v
york-lava/examples/Stack/: Makefile  Stack.hs  main.v
york-lava/examples/StackExample/: Makefile  main.v
york-lava/examples/Toggle/: Makefile  Toggle.hs  main.v
york-lava/modules/: Avalon.hs  Lava.hs  Recipe.hs
york-lava/modules/Lava/: Binary.hs  Bit.hs  C.hs  JList.hs  Prelude.hs  Speedster.hs  Vector.hs  Verilog.hs  Vhdl.hs
york-lava/simulation/: altsyncram.v  lpm_add_sub.v
(+530 files in other folders)
