name:                ghc-flite
version:             0.1.0.0
synopsis:            GHC backend that translates to the Reduceron's F-lite

-- description:         
homepage:            http://github.com/benjijones/red
license:             BSD3
license-file:        LICENSE
author:              Benji Jones
maintainer:          benji.s.jones@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable red
  main-is:            Main.hs
  hs-source-dirs:     src
  other-modules:      GHC-Flite.Translate
  build-depends:      base ==4.6.*,
                      ghc ==7.6.*,
                      ghc-paths ==0.1.0.9,
                      transformers ==0.4.*,
                      flite ==0.6.*