Name:                red-lava
Version:             0.0
Author:              Tommy Thorn
Maintainer:          Tommy Thorn <tommy-reduceron@thorn.ws>
License:             BSD3
License-file:        LICENSE
Synopsis:            A library for digital circuit description.
Description:
  Red Lava, a fork of York Lava, is library for describing digital
  circuits.  Descriptions can be simulated and converted to Verilog.
  It is similar to York and Chalmers Lava, but omits some features and
  offers a few new ones.  See the top-level module "Lava" for pointers
  to further information.
Category:            Hardware
Build-Depends:       base < 5, containers, process
Build-Type:          Simple
Stability:           provisional
Homepage:            https://github.com/tommythorn/reduceron
Ghc-options:         -fno-cse -fno-full-laziness
Hs-source-dirs:      modules
Exposed-modules:
  Recipe
  Lava
  Lava.Binary
  Lava.Bit
  Lava.JList
  Lava.Prelude
  Lava.Vector
  Lava.Vhdl
Extra-Source-Files:
  examples/Cube.hs
  examples/HalfAdd.hs
  examples/Loopy.hs
  examples/Mult.hs
  examples/Poly.hs
  examples/Stack.hs
